# translations

./: README.md
locales/: ca.yml  de.yml  en.yml  es.yml  fr.yml  it.yml  ko.yml  pl.yml  pt.yml
tools/: csv2translations.py  field_translation_sheet.py  migrate_muscat_translations.py  pyproject.toml  translations2csv.py
